# ecksy

./: .gitmodules  README
ecksy/: .gitignore  Application.hs  Auth.hs  Foundation.hs  Import.hs  Init.hs  LICENSE  Model.hs  Settings.hs  Torrent.hs  devel.hs  ecksy.cabal  ecksy.sqlite3  main.hs
ecksy/Handler/: AddMagnetLink.hs  Config.hs  Home.hs  Login.hs  Logout.hs  RenameTorrent.hs  UpdateTorrents.hs
ecksy/Torrent/: C.hs  Magnet.hs  Ops.hs
ecksy/config/: client_session_key.aes  models  routes  settings.yml  sqlite.yml
ecksy/deploy/: Procfile
ecksy/static/css/: bootstrap.css
ecksy/templates/: default-layout-wrapper.hamlet  global.lucius  homepage.hamlet  homepage.julius  homepage.lucius  login.hamlet  login.julius  login.lucius  normalize.lucius
libtorrent/: configure.ac
libtorrent-c/: CMakeLists.txt  libtorrent-c.cpp  libtorrent-c.h
libtorrent-c/cmake/: FindLibTorrent.cmake
libtorrent/.svn/: wc.db
libtorrent/include/libtorrent/: version.hpp
mockups/: README  config.mockup  home.mockup  login.mockup  logo.xcf  permalink.mockup  rename.mockup  up-down-arrows.fodg
