name:              ecksy
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Clark Gaebel
maintainer:        Clark Gaebel
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
                     Init
                     Torrent

    other-modules:   Auth
                     Foundation
                     Handler.AddMagnetLink
                     Handler.Config
                     Handler.Home
                     Handler.Login
                     Handler.Logout
                     Handler.UpdateTorrents
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Torrent.C
                     Torrent.Magnet
                     Torrent.Ops

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

executable         ecksy
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.0        && < 1.1
                 , yesod-core                    >= 1.0        && < 1.1
                 , yesod-auth                    >= 1.0        && < 1.1
                 , yesod-static                  >= 1.0        && < 1.1
                 , yesod-default                 >= 1.0        && < 1.1
                 , yesod-form                    >= 1.0        && < 1.1
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , template-haskell
                 , hamlet                        >= 1.0        && < 1.1
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.0.14     && < 0.1
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.2        && < 1.3
                 , yaml                          >= 0.7        && < 0.8
                 , http-conduit                  >= 1.4        && < 1.5
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.2        && < 1.3
                 , persistent                    == 0.9.*
                 , persistent-sqlite             == 0.9.*

                 , aeson                == 0.6.*
                 , attoparsec           == 0.10.*
                 , conduit              == 0.4.*
                 , http-conduit         == 1.4.*
                 , time                 == 1.4.*
                 , transformers         == 0.3.*
                 , unix                 == 2.5.*
                 , wai                  == 1.2.*
                 , warp-tls             == 1.2.*
                 , zlib-conduit         == 0.4.*
                 , regex-compat         == 0.95.*
                 , stm-conduit          == 0.4.*
                 , stm                  == 2.3.*
